@@ -1,3 +1,10 @@
+2005-10-16  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* treegen.cc (tree_code_generator::generate): Skip native methods
+	when not using JNI.
+	* tree.cc (tree_generator::build_array_reference): Correct a minor
+	typo.
+
 2005-10-15  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* tree.cc (tree_generator::build_array_reference): Make CALL_EXPR
